--- a/PA1_template.html
+++ b/PA1_template.html
@@ -96,7 +96,8 @@ qplot(x = interval, y = steps, data = activity.per_interval, geom = (&quot;line&
 <p>Fill missing values using mean values of appropriate interval:</p>
 <pre class="r"><code>number_of_NA = sum(is.na(activity$steps))
 
-# function returns mean steps value on specified interval
+# function returns mean steps value on specified interval using
+# previously calculated table activity.per_interval
 interval_to_mean_steps &lt;- function(interval) {
   idx &lt;- which(activity.per_interval[,'interval'] == interval)
   activity.per_interval[idx,]$steps
